--- a/client/app.postcss
+++ b/client/app.postcss
@@ -2,5 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-// x-cloak for Alpine
+/* x-cloak for Alpine */
 [x-cloak] { display: none !important; }
